# mcxa-pac

./: .gitignore  Cargo.toml  README.md  deny.toml  device.x  regen-unix.sh
.github/workflows/: check.yml
patch/: MCXA256.yaml  mrcc.yaml  port.yaml
src/: adc0.rs  aoi0.rs  can0.rs  cdog0.rs  cmc.rs  cmp0.rs  crc0.rs  ctimer0.rs  dac0.rs  dbgmailbox.rs  dma0.rs  edma_0_tcd0.rs  eim0.rs  eqdc0.rs  erm0.rs  flexio0.rs  flexpwm0.rs  fmc0.rs  fmu0.rs  freqme0.rs  generic.rs  glikey0.rs  gpio0.rs  i3c0.rs  inputmux0.rs  lib.rs  lpi2c0.rs  lpspi0.rs  lptmr0.rs  lpuart0.rs  mau0.rs  mbc0.rs  mrcc0.rs  opamp0.rs  ostimer0.rs  pkc0.rs  port0.rs  rtc0.rs  sau.rs  scg0.rs  (+14 more)
src/adc0/: cal_gar.rs  cfg.rs  cfg2.rs  cmdh1.rs  cmdh2.rs  cmdh3.rs  cmdh4.rs  cmdh5.rs  cmdh6.rs  cmdh7.rs  cmdl1.rs  cmdl2.rs  cmdl3.rs  cmdl4.rs  cmdl5.rs  cmdl6.rs  cmdl7.rs  ctrl.rs  cv.rs  de.rs  fctrl0.rs  gcc0.rs  gcr0.rs  hstrim.rs  ie.rs  ofstrim.rs  param.rs  pause.rs  resfifo0.rs  stat.rs  swtrig.rs  tctrl.rs  tstat.rs  verid.rs
src/aoi0/: bfcrt010.rs  bfcrt011.rs  bfcrt012.rs  bfcrt013.rs  bfcrt230.rs  bfcrt231.rs  bfcrt232.rs  bfcrt233.rs
src/can0/: cbt.rs  crcr.rs  cs0.rs  cs1.rs  cs10.rs  cs11.rs  cs12.rs  cs13.rs  cs14.rs  cs15.rs  cs16.rs  cs17.rs  cs18.rs  cs19.rs  cs2.rs  cs20.rs  cs21.rs  cs22.rs  cs23.rs  cs24.rs  cs25.rs  cs26.rs  cs27.rs  cs28.rs  cs29.rs  cs3.rs  cs30.rs  cs31.rs  cs4.rs  cs5.rs  cs6.rs  cs7.rs  cs8.rs  cs9.rs  ctrl1.rs  ctrl1_pn.rs  ctrl2.rs  ctrl2_pn.rs  ecr.rs  edcbt.rs  (+627 more)
src/cdog0/: add.rs  add1.rs  add16.rs  add256.rs  assert16.rs  (+14 more)
supply-chain/: audits.toml
(+1004 files in other folders)
