[package]
name = "mcxa-pac"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Peripheral Access Crate for MCXA256 devices"
repository = "https://github.com/OpenDevicePartnership/mcxa-pac"
readme = "README.md"
keywords = ["nxp", "mcxa", "mcxa256", "no_std", "embedded"]
categories = ["embedded", "no-std"]
rust-version = "1.91"
exclude = ["svd/*", "patch/*"]

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = { version = "0.7.5", optional = true }
critical-section = { version = "1.2.0", optional = true }
defmt = { version = "1.0.1", optional = true }
vcell = "0.1.3"

[features]
debug = []
defmt = ["dep:defmt"]
rt = ["cortex-m-rt/device"]
